# air

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE.md  README.md  SECURITY.md
.codex/: core_startup_flow.md  data_flow_and_storage.md  gui_core_interaction.md  project_tasks_summary.md  software_and_core_lifecycle.md  software_startup_flow.md
.github/workflows/: ci.yml
crates/air-app/: Cargo.toml
crates/air-app/src/: command.rs  events.rs  lib.rs  router.rs  runtime.rs  services.rs  state.rs  subscription_controller.rs
crates/air-app/src/router/: cancellation.rs  config.rs  connections.rs  context.rs  core.rs  monitoring.rs  proxy.rs  rules.rs  shared.rs  subscriptions.rs
crates/air-config/: Cargo.toml
crates/air-config/src/: diagnostic.rs  dns.rs  lib.rs  merge.rs  model.rs  override_script.rs  sniffer.rs  tun.rs  yaml.rs
crates/air-config/src/dns/: nameserver.rs  policy.rs  settings.rs  validator.rs  view_model.rs
crates/air-config/src/model/: common.rs  dns.rs  global.rs  inbound.rs  provider.rs  proxy.rs  rule.rs
crates/air-desktop/: Cargo.toml  build.rs
crates/air-desktop/src/: main.rs
crates/air-error/: Cargo.toml
crates/air-error/src/: lib.rs
crates/air-mihomo/: Cargo.toml  build.rs
crates/air-mihomo/src/: acquire.rs  client.rs  config_test.rs  detect.rs  dto.rs  embedded.rs  global_config.rs  lib.rs  process.rs  release.rs  service.rs  streams.rs
crates/air-mihomo/src/groups/: model.rs
crates/air-mihomo/src/proxies/: model.rs  repository.rs
crates/air-mihomo/src/proxies/model/: collection.rs  display.rs  preview.rs  protocols.rs  sensitive.rs
crates/air-mihomo/src/rules/: mod.rs  provider.rs  rule.rs
crates/air-mihomo/src/subscriptions/: mod.rs  model.rs  share_link.rs  update.rs
crates/air-platform/: Cargo.toml
crates/air-platform/src/: autostart.rs  core_service.rs  elevated_process.rs  lib.rs  privilege.rs  process.rs  process_icon.rs  single_instance.rs  tray.rs  window.rs
crates/air-platform/src/core_service/: args.rs  control.rs  elevated.rs  install.rs  non_windows.rs  types.rs  windows_acl.rs  worker.rs
crates/air-settings/: Cargo.toml
crates/air-settings/src/: lib.rs  model.rs
crates/air-storage/: Cargo.toml
crates/air-storage/src/: core_config_store.rs  file_store.rs  lib.rs  override_script_store.rs  paths.rs  settings_store.rs  subscription_store.rs
crates/air-telemetry/: Cargo.toml
crates/air-telemetry/src/: lib.rs  log_retention.rs  memory.rs  redaction.rs
crates/air-ui/: Cargo.toml
crates/air-ui/src/: OPTIMIZATION_FOUNDATION.md  icons.rs  lib.rs  routes.rs  shell.rs
crates/air-ui/src/components/: mod.rs
crates/air-ui/src/pages/: config_editor.rs  connections.rs  mod.rs  monitor.rs  override_script.rs  proxy_groups.rs  rules.rs  settings.rs  subscriptions.rs
crates/air-ui/src/pages/config_editor/: form_helpers.rs  render.rs  state.rs  tests.rs
crates/air-ui/src/pages/connections/: data_mapping.rs  fixtures.rs  format.rs  render.rs  render_controls.rs  state.rs  tests.rs
crates/air-ui/src/pages/monitor/: format.rs  state.rs  tests.rs  widgets.rs
crates/air-ui/src/pages/override_script/: state.rs  tests.rs  widgets.rs
crates/air-ui/src/pages/proxy_groups/: fixtures.rs  format.rs  render.rs  runtime_projection.rs  state.rs  tests.rs
crates/air-ui/src/pages/rules/: mapping.rs  state.rs  tests.rs  widgets.rs
crates/air-ui/src/pages/settings/: application_pages.rs  controls.rs  network_pages.rs  tests.rs
crates/air-ui/src/pages/subscriptions/: cache_view.rs  form_render.rs  format.rs  render.rs  state.rs  tests.rs
crates/air-ui/src/shell/: actions.rs  config_loaders.rs  events.rs  input_bindings.rs  input_helpers.rs  lifecycle.rs  navigation.rs  render.rs  runtimes.rs  status_bar.rs  theme_runtime.rs
docs/: architecture.md  config.yaml  mihomo-api.md
