[package]
name = "air-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Application orchestration, command routing, snapshots, and background tasks for Air."
publish = false

[dependencies]
air-config.workspace = true
air-error.workspace = true
air-mihomo.workspace = true
air-platform.workspace = true
air-settings.workspace = true
air-storage.workspace = true
air-telemetry.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
