[package]
name = "air-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "File layout, atomic persistence, backups, and stores for Air configuration data."
publish = false

[dependencies]
air-config.workspace = true
air-error.workspace = true
air-mihomo.workspace = true
air-settings.workspace = true
async-trait.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
