[package]
name = "air-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tracing, log retention, memory sampling, and redaction helpers for Air."
publish = false

[dependencies]
air-error.workspace = true
directories.workspace = true
libmimalloc-sys.workspace = true
time.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
tempfile.workspace = true
